--- a/tlabel_service/pom.xml
+++ b/tlabel_service/pom.xml
@@ -8,11 +8,12 @@
         <version>2.1.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.csdc</groupId>
-    <artifactId>bootm</artifactId>
+    <artifactId>tlabel_service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>bootm</name>
-    <description>Demo project for Spring Boot</description>
+    <name>tlabel_service</name>
+    <description>provider of tlabel</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -70,18 +71,6 @@
             <artifactId>dubbo-spring-boot-starter</artifactId>
             <version>0.2.0</version>
         </dependency>
-        <!--lda依赖-->
-        <dependency>
-            <groupId>info.csdc</groupId>
-            <artifactId>lda_common</artifactId>
-            <version>0.0.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.projectlombok</groupId>
-                    <artifactId>lombok</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <dependency>
             <groupId>com.csdc</groupId>
@@ -129,6 +118,7 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.1.2.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>com.csdc</groupId>
             <artifactId>tlabel_api</artifactId>
