--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,35 @@
     </modules>
 
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>csdc</id>
+            <name>csdc</name>
+            <url>http://192.168.88.200:8081/repository/csdc/</url>
+        </repository>
+    </repositories>
+
+
+<!--
+    <profiles>
+    <profile>
+        <id>jdk‐1.7</id>
+        <activation>
+            <activeByDefault>true</activeByDefault>
+            <jdk>1.7</jdk>
+        </activation>
+        <properties>
+            <maven.compiler.source>1.7</maven.compiler.source>
+            <maven.compiler.target>1.7</maven.compiler.target>
+            <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
+        </properties>
+    </profile>
+    </profiles>
+-->
+
 
 </project>
