--- a/tlabel_api/pom.xml
+++ b/tlabel_api/pom.xml
@@ -12,14 +12,26 @@
     <artifactId>tlabel_api</artifactId>
 
     <dependencies>
+
         <dependency>
-            <groupId>csdc.info</groupId>
+            <groupId>info.csdc</groupId>
             <artifactId>lda_common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/lda_common-0.0.1-SNAPSHOT.jar</systemPath>
+            <version>0.0.1</version>
         </dependency>
+
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
