--- a/tlabel_service/pom.xml
+++ b/tlabel_service/pom.xml
@@ -19,6 +19,13 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>csdc</id>
+            <name>csdc</name>
+            <url>http://192.168.88.200:8081/repository/csdc/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -70,6 +77,23 @@
             <groupId>com.alibaba.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
             <version>0.2.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba</groupId>
+                    <artifactId>dubbo</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.6.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -120,11 +144,24 @@
             <version>5.1.2.RELEASE</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.csdc</groupId>-->
+            <!--<artifactId>tlabel_api</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>com.csdc</groupId>
+            <groupId>info.csdc</groupId>
             <artifactId>tlabel_api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
+            <classifier>1.7</classifier>
         </dependency>
+        
+        <dependency>
+            <groupId>info.csdc</groupId>
+            <artifactId>lda_common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
 
     </dependencies>
 
