--- a/tlabel_api/pom.xml
+++ b/tlabel_api/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>lda_common</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
