--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>com.csdc</groupId>
     <artifactId>tlabel</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
 
     <modules>
         <module>tlabel_api</module>
@@ -20,14 +26,67 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>info.csdc</groupId>
+            <artifactId>lda_common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
     <repositories>
+        <!--Central Repo-->
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://maven.aliyun.com/repository/central</url>
+            <!--<url>https://repo.maven.apache.org/maven2/</url>-->
+        </repository>
+        <!--Spring Repository-->
+        <repository>
+            <id>spring</id>
+            <name>Spring Repo</name>
+            <url>https://maven.aliyun.com/repository/spring</url>
+            <!--<url>http://repo.spring.io/release</url>-->
+        </repository>
+        <!--Spring Plugins Repository-->
+        <repository>
+            <id>spring-plugin</id>
+            <name>Spring Plugin Repo</name>
+            <url>https://maven.aliyun.com/repository/spring-plugin</url>
+            <!--<url>http://repo.spring.io/plugins-release</url>-->
+        </repository>
+        <!--CSDC Repo-->
         <repository>
             <id>csdc</id>
             <name>csdc</name>
             <url>http://192.168.88.200:8081/repository/csdc/</url>
         </repository>
+        <!--CSDC Snapshots Repo-->
+        <repository>
+            <id>csdc-snapshots</id>
+            <name>csdc-snapshots</name>
+            <url>http://192.168.88.200:8081/repository/csdc-snapshots/</url>
+        </repository>
     </repositories>
 
+    <pluginRepositories>
+        <!--Central Repo-->
+        <pluginRepository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://maven.aliyun.com/repository/central</url>
+            <!--<url>https://repo.maven.apache.org/maven2/</url>-->
+        </pluginRepository>
+    </pluginRepositories>
 
 <!--
     <profiles>
