--- a/tlabel_api/pom.xml
+++ b/tlabel_api/pom.xml
@@ -10,34 +10,84 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tlabel_api</artifactId>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>info.csdc</groupId>
-            <artifactId>lda_common</artifactId>
-            <version>0.0.1</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
-            <scope>provided</scope>
-        </dependency>
-
-    </dependencies>
+    <properties>
+        <java.version>1.7</java.version>
+    </properties>
+    <distributionManagement>
+        <!--Release Repo-->
+        <repository>
+            <id>csdc</id>
+            <name>csdc</name>
+            <url>http://common:csdcmaven@192.168.88.200:8081/repository/csdc/</url>
+        </repository>
+        <!--Snapshot Repo-->
+        <snapshotRepository>
+            <id>csdc-snapshots</id>
+            <name>csdc-snapshots</name>
+            <url>http://common:csdcmaven@192.168.88.200:8081/repository/csdc-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
+            <!--Resource Plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <!--skip testResources phase-->
+                <executions>
+                    <execution>
+                        <id>default-testResources</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Compiler Plugins -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
+                <!--skip testCompile phase-->
+                <executions>
+                    <execution>
+                        <id>default-testCompile</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
+            </plugin>
+            <!--Surefire Plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <!--skip test phase-->
+                <executions>
+                    <execution>
+                        <id>default-test</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--Source Plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <!--build source jar when package-->
+                <executions>
+                    <execution>
+                        <id>source-jar</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
