--- a/tlabel_service/pom.xml
+++ b/tlabel_service/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>tlabel</artifactId>
+        <groupId>com.csdc</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.csdc</groupId>
@@ -140,16 +139,10 @@
             <version>5.1.2.RELEASE</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.csdc</groupId>-->
-            <!--<artifactId>tlabel_api</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
-
         <dependency>
-            <groupId>com.csdc</groupId>
+            <groupId>info.csdc</groupId>
             <artifactId>tlabel_api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>2.0.5</version>
         </dependency>
 
         <dependency>
@@ -165,52 +158,6 @@
 
     </dependencies>
 
-
-    <repositories>
-        <!--Central Repo-->
-        <repository>
-            <id>central</id>
-            <name>Maven Central</name>
-            <url>https://maven.aliyun.com/repository/central</url>
-            <!--<url>https://repo.maven.apache.org/maven2/</url>-->
-        </repository>
-        <!--Spring Repository-->
-        <repository>
-            <id>spring</id>
-            <name>Spring Repo</name>
-            <url>https://maven.aliyun.com/repository/spring</url>
-            <!--<url>http://repo.spring.io/release</url>-->
-        </repository>
-        <!--Spring Plugins Repository-->
-        <repository>
-            <id>spring-plugin</id>
-            <name>Spring Plugin Repo</name>
-            <url>https://maven.aliyun.com/repository/spring-plugin</url>
-            <!--<url>http://repo.spring.io/plugins-release</url>-->
-        </repository>
-        <!--CSDC Repo-->
-        <repository>
-            <id>csdc</id>
-            <name>csdc</name>
-            <url>http://192.168.88.200:8081/repository/csdc/</url>
-        </repository>
-        <!--CSDC Snapshots Repo-->
-        <repository>
-            <id>csdc-snapshots</id>
-            <name>csdc-snapshots</name>
-            <url>http://192.168.88.200:8081/repository/csdc-snapshots/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <!--Central Repo-->
-        <pluginRepository>
-            <id>central</id>
-            <name>Maven Central</name>
-            <url>https://maven.aliyun.com/repository/central</url>
-            <!--<url>https://repo.maven.apache.org/maven2/</url>-->
-        </pluginRepository>
-    </pluginRepositories>
 
     <build>
         <plugins>
