--- a/tlabel_service/src/main/resources/application.yml
+++ b/tlabel_service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     username: smdbtest
     password: p1013smdbtest702
     url: jdbc:oracle:thin:@192.168.88.220:1521:orcl
-    driver-class-name: oracle.jdbc.driver.OracleDriver
+    driver-class-name: oracle.jdbc.OracleDriver
     type: com.alibaba.druid.pool.DruidDataSource
 
 #   数据源其他配置
