更换注册中心调整依赖

--- a/tlabel_service/pom.xml
+++ b/tlabel_service/pom.xml
@@ -87,7 +87,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <!-- Dubbo Nacos registry dependency -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.nacos/nacos-client -->
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>0.9.0</version>
+        </dependency>
         <dependency>
             <groupId>com.csdc</groupId>
             <artifactId>label</artifactId>
