--- a/tlabel_service/src/main/resources/application.properties
+++ b/tlabel_service/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=zhangzhi
-#spring.datasource.password=zz951130
-#spring.datasource.url=jdbc:mysql://localhost:3306/miya
+#配置环境
+spring.profiles.active=prod
